SAI-1148 PMD issues