@@ -1,12 +1,12 @@
 /**
  * Copyright © 2018 Nelson Tavares de Sousa (tavaresdesousa@email.uni-kiel.de)
- * <p>
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * http://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -19,9 +19,14 @@ public class TaskElement {
 
     private final String fileName;
     private final transient Progress parent;
-    private Integer progressInPercent = new Integer(0);
+    private Integer progressInPercent = Integer.valueOf(0);
 
-    TaskElement(String fileName, Progress parent) {
+    /**
+     * The TaskElement constructor
+     * @param fileName The name of the file to be copied
+     * @param parent The parent instance containing this TaskElement
+     */
+    TaskElement(final String fileName, final Progress parent) {
         this.fileName = fileName;
         this.parent = parent;
     }
@@ -36,7 +41,9 @@ public class TaskElement {
 
     public void setProgressInPercent(final Integer progressInPercent) {
         this.progressInPercent = progressInPercent;
-        if (progressInPercent == 100) this.parent.notifyFinishedCopy();
+        if (progressInPercent == 100) {
+            this.parent.notifyFinishedCopy();
+        }
     }
 
 
